--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">twitter client</string>
     <string name="item_progress_text">Loading</string>
+    <string name="login">Login</string>
+    <string name="followers">Followers</string>
 </resources>
